Se agrega los grupos

--- a/src/pe/alinet/grupos/GrupoFrame.form
+++ b/src/pe/alinet/grupos/GrupoFrame.form
@@ -7,18 +7,18 @@
         <Property name="persistenceUnit" type="java.lang.String" value="pu"/>
       </Properties>
     </Component>
-    <Component class="javax.persistence.Query" name="usuarioQuery">
+    <Component class="javax.persistence.Query" name="query">
       <Properties>
-        <Property name="query" type="java.lang.String" value="SELECT u FROM Usuario u"/>
+        <Property name="query" type="java.lang.String" value="SELECT g FROM Grupo g"/>
         <Property name="entityManager" type="java.lang.Object" editor="org.netbeans.modules.form.j2ee.J2EEPropertyModifier$EMProperty$EntityManagerEditor">
           <ComponentRef name="entityManager"/>
         </Property>
       </Properties>
     </Component>
-    <Component class="java.util.List" name="usuarioList">
+    <Component class="java.util.List" name="list">
       <Properties>
         <Property name="query" type="java.lang.Object" editor="org.netbeans.modules.form.j2ee.J2EEPropertyModifier$QueryBeanProperty$QueryEditor">
-          <ComponentRef name="usuarioQuery"/>
+          <ComponentRef name="query"/>
         </Property>
         <Property name="observable" type="boolean" value="true"/>
       </Properties>
@@ -46,12 +46,9 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" pref="380" max="32767" attributes="0"/>
-                  <Component id="jToolBar1" max="32767" attributes="0"/>
-              </Group>
+              <Component id="jScrollPane1" pref="380" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -59,9 +56,8 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <Component id="jToolBar1" min="-2" pref="25" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" pref="258" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="278" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -75,7 +71,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTable1">
+        <Component class="javax.swing.JTable" name="tbGrupos">
           <Properties>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
@@ -101,39 +97,18 @@
             </Property>
           </Properties>
           <BindingProperties>
-            <BindingProperty name="elements" source="usuarioList" target="jTable1" targetPath="elements" updateStrategy="0" immediately="true">
+            <BindingProperty name="elements" source="list" target="tbGrupos" targetPath="elements" updateStrategy="0" immediately="true">
               <Subbinding sourcePath="${id}">
-                <BindingParameter name="NAME" value="C&#xf3;digo"/>
+                <BindingParameter name="NAME" value="ID"/>
               </Subbinding>
-              <Subbinding sourcePath="${username}">
-                <BindingParameter name="NAME" value="Apellidos y Nombres"/>
+              <Subbinding sourcePath="${groupname}">
+                <BindingParameter name="NAME" value="Nombre de grupo"/>
               </Subbinding>
-              <Subbinding sourcePath="${grupo}">
-                <BindingParameter name="NAME" value="Grupo"/>
+              <Subbinding sourcePath="${groupdesc}">
+                <BindingParameter name="NAME" value="Descripcion"/>
               </Subbinding>
             </BindingProperty>
           </BindingProperties>
-        </Component>
-      </SubComponents>
-    </Container>
-    <Container class="javax.swing.JToolBar" name="jToolBar1">
-      <Properties>
-        <Property name="floatable" type="boolean" value="false"/>
-        <Property name="rollover" type="boolean" value="true"/>
-      </Properties>
-
-      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
-      <SubComponents>
-        <Component class="javax.swing.JButton" name="btnAgregarUsuario">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Agregar usuario"/>
-            <Property name="focusable" type="boolean" value="false"/>
-            <Property name="horizontalTextPosition" type="int" value="0"/>
-            <Property name="verticalTextPosition" type="int" value="3"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAgregarUsuarioActionPerformed"/>
-          </Events>
         </Component>
       </SubComponents>
     </Container>
